--- a/public/css/game.css
+++ b/public/css/game.css
@@ -1,3 +1,38 @@
 body {
     overflow:hidden;
+    background-color: black;
+}
+
+.progress{
+    position: absolute;
+    width: 25%;
+    height:80%;
+    bottom: 10%;
+    top: 10%;
+    opacity: 0.8; 
+    filter: alpha(opacity=80);
+}
+.progress-bar{
+    position:absolute;
+    width: 100%;
+    height: 0%;
+}
+
+.containerdiv{
+    min-width: 850px;
+    min-height: 650px;
+    height: 100vh;
+    width: 100vw;
+}
+.playdiv{
+    width: 90%;
+    height: 100%;
+}
+.scorediv{
+    height: 100%;
+    width: 10%;
+    position: fixed;
+    right: 0;
+    top: 0;
+    background-color: blue;
 }
