--- a/views/index.jade
+++ b/views/index.jade
@@ -1,15 +1,33 @@
 html
   head
-    script(type="text/javascript" src="/javascript/xeblaster2.js")  
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")
+    link(rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js")
     script(src="/javascript/three.min.js" type="text/javascript")
     script(src="/javascript/threex.laserbeam.js")
+    script(type="text/javascript" src="/javascript/xeblaster_terrain.js")  
+    script(type="text/javascript" src="/javascript/xeblaster_objects.js")  
+    script(type="text/javascript" src="/javascript/xeblaster_explosions.js")  
+    script(type="text/javascript" src="/javascript/xeblaster2.js")  
     link(rel="stylesheet", href="/css/game.css")
 
   body
+    div.containerdiv
+      div#playdiv.playdiv
+      div.scorediv
+        p(style="margin-bottom:1px;text-align:center;color:white;") XeBlaster
+        p(style="margin-top:1px;text-align:center;color:white;") 2
+        hr(style='background-color:white;width:90%')
+        div.progress(style="left:20%")
+          div.progress-bar.bg-danger#scorebar_red(role="progressbar" style="" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100")
+        div.progress(style="left: 65%;")
+          div.progress-bar.bg-primary#scorebar_blue(role="progressbar" style="top:50%;height:50%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100")
+        div(style="position:absolute;bottom:7%;left:7%;font-size:12px;color:white;") Weapon &nbsp;   Power
+        div#score(style="padding-left:2px;padding-right:2px;position:absolute;bottom:2px;text-align:right;color:white;font-size:16px;") 0
     script.
       $(document).ready(
         function(){
-        LoadGame("mainwindow");
-        InitializeScene(); 
+        LoadGame("playdiv");
+        InitializeScene("playdiv"); 
         animate();});
