--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,7 @@ html
     script(type="text/javascript" src="/javascript/xeblaster_terrain.js")  
     script(type="text/javascript" src="/javascript/xeblaster_objects.js")  
     script(type="text/javascript" src="/javascript/xeblaster_explosions.js")  
+    script(type="text/javascript" src="/javascript/xeblaster_player.js")  
     script(type="text/javascript" src="/javascript/xeblaster2.js")  
     link(rel="stylesheet", href="/css/game.css")
 
@@ -25,9 +26,20 @@ html
           div.progress-bar.bg-primary#scorebar_blue(role="progressbar" style="top:50%;height:50%" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100")
         div(style="position:absolute;bottom:7%;left:7%;font-size:12px;color:white;") Weapon &nbsp;   Power
         div#score(style="padding-left:2px;padding-right:2px;position:absolute;bottom:2px;text-align:right;color:white;font-size:16px;") 0
+
     script.
+
+      document.sounds = {
+        'blaster_player': new Audio("/sound/466867__mikee63__blaster-shot-single-5.wav"),
+        'minihit': new Audio("/sound/122974__zimbot__blasterincoming.wav"),
+        'littleboom': [
+          new Audio("/sound/336005__rudmer-rotteveel__sharp-explosion-2-of-5.wav"),
+          new Audio("/sound/336006__rudmer-rotteveel__sharp-explosion-1-of-5.wav"),
+          new Audio("/sound/336011__rudmer-rotteveel__sharp-explosion-4-of-5.wav")
+        ]
+      };
+      document.sounds['blaster_player'].volume = .05;
       $(document).ready(
         function(){
         LoadGame("playdiv");
-        InitializeScene("playdiv"); 
         animate();});
