Added index and sounds

--- a/views/index.jade
+++ b/views/index.jade
@@ -36,7 +36,10 @@ html
           new Audio("/sound/336005__rudmer-rotteveel__sharp-explosion-2-of-5.wav"),
           new Audio("/sound/336006__rudmer-rotteveel__sharp-explosion-1-of-5.wav"),
           new Audio("/sound/336011__rudmer-rotteveel__sharp-explosion-4-of-5.wav")
-        ]
+        ],
+        'bigboom': new Audio('/sound/268557__cydon__explosion-001.mp3'),
+        'whip': new Audio("/sound/351267__peterbullmusic__mixed-whip-crack-1.wav"),
+        'whoosh': new Audio("/sound/403973__martian__beast-whoosh.wav")
       };
       document.sounds['blaster_player'].volume = .05;
       $(document).ready(
