--- a/public/css/game.css
+++ b/public/css/game.css
@@ -3,6 +3,37 @@ body {
     background-color: black;
 }
 
+#reveal-container {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    position: absolute;
+    visibility: visible;
+    display: block;
+    background-color: rgba(22,22,22,0.5); /* complimenting your modal colors */
+}
+#reveal-container:target {
+    visibility: visible;
+    display: block;
+}
+.reveal-modal {
+    display: block;
+    background:#e1e1e1; 
+    margin: 0 auto;
+    width:75%; 
+    min-width: 600px;
+    min-height:500px;
+    overflow-y: auto;
+    height: 80%;
+    position:relative; 
+    z-index:41;
+    top: 10%;
+    padding:30px; 
+    -webkit-box-shadow:0 0 10px rgba(0,0,0,0.4);
+    -moz-box-shadow:0 0 10px rgba(0,0,0,0.4); 
+    box-shadow:0 0 10px rgba(0,0,0,0.4);
+}
+
 .progress{
     position: absolute;
     width: 25%;
@@ -19,8 +50,10 @@ body {
 }
 
 .containerdiv{
-    min-width: 850px;
-    min-height: 650px;
+    min-width: 1000px;
+    min-height: 800px;
+    max-width: 1000px;
+    max-height:800px;
     height: 100vh;
     width: 100vw;
 }
@@ -34,5 +67,5 @@ body {
     position: fixed;
     right: 0;
     top: 0;
-    background-color: blue;
+    background-color: black; /*#5992c2;*/
 }
